# hello_imgui

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gitpod.yml  Android_status.md  CMakeLists.txt  CMakePresets.json  Changelog.md  LICENSE  README.md  README.src.md  Readme.md  TODO.md  hello_imgui_example.ini  justfile  vcpkg-configuration.json  vcpkg.json
.github/ci_automation_tests/: CMakeLists.txt  ci_automation_test_app.cpp
_example_integration/: CMakeLists.txt  Readme.md  hello_world.main.cpp
cmake/: CompilerWarnings.cmake  (+5 more)
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  dpi_aware.md  genindex.html  index.html  index.rst
docs/_sources/: doc_api.md
docs/book/: .buildinfo  00_00_intro.html  05_02_demos.html  05_05_get_started.html  05_05_starter_template.html  05_10_demos.html  05_10_motto.html  10_02_assets.html  10_05_api.html  60_05_build.html  90_05_gallery.html  build.html  doc_api.html  doc_params.html  genindex.html  get_started.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
docs/book/_sources/: 00_00_intro.md  05_05_get_started.md  05_05_starter_template.md  10_02_assets.md  10_05_api.md  60_05_build.md  build.md  doc_api.md  doc_params.md  intro.md
docs/book_src/: 00_00_intro.md  05_02_demos.md  05_05_get_started.md  05_10_motto.md  60_05_build.md  90_05_gallery.md  _config.yml  _toc.yml  doc_api.md  doc_params.md  generate_book.sh
src/: CMakeLists.txt  main.test.cpp
src/Mamals/: CMakeLists.txt  Mamals.h
src/Mamals/Canidae/: CMakeLists.txt  Readme.md  dog.cpp  dog.h  dog.test.cpp
src/Mamals/Felinae/: CMakeLists.txt  cat.cpp  cat.test.cpp
src/demos/: CMakeLists.txt
src/demos/demo_imgui/: CMakeLists.txt  demo_imgui.main.cpp
src/demos/demo_imgui_runner_minimal/: CMakeLists.txt  demo_imgui_runner_minimal.main.cpp
src/hello_imgui/: CMakeLists.old.txt  CMakeLists.txt  abstract_runner.cpp  abstract_runner.h  add_hello_imgui_app.cmake  app_window_params.h  backend_pointers.h  doc_api.md  doc_api.src.md  doc_params.md  doc_params.src.md  docking_params.h  dpi_aware.cpp  dpi_aware.h  hello_imgui.cpp  hello_imgui.h  hello_imgui_api.md  hello_imgui_api.src.md  hello_imgui_assets.h  hello_imgui_error.h  hello_imgui_font.cpp  hello_imgui_font.h  hello_imgui_include_opengl.h  hello_imgui_logger.h  hello_imgui_screenshot.cpp  hello_imgui_screenshot.h  hello_imgui_theme.cpp  hello_imgui_theme.h  hello_imgui_widgets.cpp  hello_imgui_widgets.h  hello_imguidocking.cpp  hello_imguidocking.h  icons_font_awesome_4.h  icons_font_awesome_6.h  image_from_asset.h  image_gl.h  imgui_default_behaviors.cpp  imgui_default_behaviors.h  imgui_default_settings.cpp  imgui_default_settings.h  (+16 more)
src/hello_imgui/add_hello_imgui_app_cmake/: add_hello_imgui_app.cmake
src/hello_imgui/backend_api/: backend_api.cpp  backend_api.h  backend_glfw.cpp  backend_glfw.h  backend_sdl.cpp  backend_sdl.h  opengl_setup_api.cpp  opengl_setup_api.h  opengl_setup_glfw.cpp  opengl_setup_glfw.h  opengl_setup_sdl.cpp  opengl_setup_sdl.h  screen_bounds.h
src/hello_imgui/backend_impls/: runner_emscripten.cpp  runner_emscripten.h  runner_glfw.cpp  runner_glfw.h  runner_glfw_opengl3.h  runner_qt.cpp  runner_sdl.cpp  runner_sdl.h  runner_sdl_opengl3.cpp  runner_sdl_opengl3.h
src/hello_imgui/doc_src/: hello_imgui_diagram.puml
src/hello_imgui/impl/: dpi_aware.cpp  hello_imgui.cpp  hello_imgui_font.cpp  hello_imgui_screenshot.cpp  hello_imgui_theme.cpp  hello_imgui_widgets.cpp  imgui_default_settings.cpp  imgui_theme.cpp  renderer_backend_options.cpp  runner_params.cpp  screen_bounds.cpp
src/hello_imgui/internal/: borderless_movable.cpp  borderless_movable.h  borderless_resizable.cpp  borderless_resizable.h  clock_seconds.cpp  clock_seconds.h  docking_details.cpp  docking_details.h  emscripten_logs.h  fplus_all_in_one.hpp  functional_utils.cpp  functional_utils.h  hello_imgui_assets.cpp  hello_imgui_ini_any_parent_folder.cpp  hello_imgui_ini_any_parent_folder.h  hello_imgui_ini_settings.cpp  hello_imgui_ini_settings.h  hello_imgui_logger.cpp  idle_frame_wait_for_python_async_io.h  image_abstract.cpp  image_abstract.h  image_dx11.cpp  image_dx11.h  image_from_asset.cpp  image_from_asset_dx11.cpp  image_from_asset_metal.cpp  image_from_asset_none.cpp  image_from_asset_opengl.cpp  image_from_asset_vulkan.cpp  image_gl.cpp  image_gl_deprecated.cpp  image_gl_deprecated.h  image_metal.h  image_metal.mm  image_opengl.cpp  image_opengl.h  image_vulkan.cpp  image_vulkan.h  imgui_global_context.cpp  imgui_global_context.h  (+16 more)
src/hello_imgui/sokol/: hello_imgui_sokol.cmake  hello_imgui_sokol.cpp  hello_imgui_sokol.h  sokol_impl.cpp  sokol_impl.mm
src/hello_imgui/widgets/: logger.cpp  logger.h
src/hello_imgui_demos/: CMakeLists.txt
src/hello_imgui_demos/SdlTest/: CMakeLists.txt  sdl_test.cpp
src/hello_imgui_demos/example_glfw_opengl3/: CMakeLists.txt  example_glfw_opengl3.cpp
src/hello_imgui_demos/hello_custom_background/: CMakeLists.txt  hello_custom_background.main.cpp
src/hello_imgui_demos/hello_edr/: CMakeLists.txt  hello_edr.mm
src/hello_imgui_demos/hello_gif/: CMakeLists.txt  hello_gif.main.cpp
src/hello_imgui_demos/hello_globe/: CMakeLists.txt  hello_globe.main.cpp
src/hello_imgui_remote/: CMakeLists.txt
src/hello_imgui_runner/: abstract_runner.cpp  abstract_runner.h  hello_imgui.h  imgui_default_settings.cpp  imgui_default_settings.h  imgui_window_params.cpp  runner_params.h
src/hello_imgui_test_engine_integration/: hello_imgui_test_engine_cmake.cmake  imconfig_with_test_engine.h  test_engine_integration.cpp  test_engine_integration.h  todo_test.md
src/hello_imgui_tests/: CMakeLists.txt  doctest.h  hello_imgui_ini_settings_test.cpp  hello_imgui_tests_main.cpp
src/imgui_runner/: CMakeLists.txt  add_imgui_runner_app.cmake  imgui_runner.cpp  imgui_runner.h
src/imgui_runner_glfw/: CMakeLists.txt  imgui_runner_glfw.cpp
src/imgui_runner_qt/: CMakeLists.txt  Readme.md  imgui_runner_qt.cpp
src/netimgui_remote_display/: CMakeLists.txt  NetImguiServer_HAL_Glfw.cpp  netimgui_remote_display.cpp
(+317 files in other folders)
